--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "chromedriver": "^2.45.0",
+    "element-ui": "^2.4.11",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
